--- a/www/views/entity_list/Sample/survival.haml
+++ b/www/views/entity_list/Sample/survival.haml
@@ -7,16 +7,24 @@
 = action_card_render action_card do
   - other_factors = study.sample_info.fields.select{|name| name = Misc.snake_case(name); locals[name] and locals[name] != "false"}
   - other_factors << 'BRCA status' if  locals["BRCA_status"] and locals["BRCA_status"] != "false"
-  - main_field = "donor_interval_of_last_followup"
+
+  - survival_field = "donor_survival_time"
+  - followup_field = "donor_interval_of_last_followup"
+  - main_field = "time"
   - main_event = "donor_vital_status"
 
-  - sample_info = study.sample_info.slice [main_field, main_event]
+  - sample_info = study.sample_info.slice [survival_field, followup_field, main_event]
   - if contrast and contrast  != 'none'
     - contrast_list = Entity::List.load_list("Sample", contrast, user)
     - sample_info = sample_info.select((list + contrast_list).uniq)
 
   - sample_info.add_field "Event" do |k,values|
     - values[main_event].first == 'deceased' ? [1] : [0]
+
+  - sample_info.add_field main_field do |k,values|
+    - v = values[survival_field]
+    - v = values[followup_field] if v.nil? or v.empty?
+    - v
 
   - pvalue = nil
   = resource("Survival plot for #{list_id}.png", nil, :image) do |result_file|
