New drivers and new version of PDB-Viewer in Structure

--- a/www/views/entity/Sample/mutation_signatures.haml
+++ b/www/views/entity/Sample/mutation_signatures.haml
@@ -10,5 +10,6 @@
 = action_card_render action_card do
   = table :page => "1~-#{donor}" do
     - tsv = donor.pcawg_mutation_signature.transpose("Signature")
+    - tsv.cast = :to_f
     - tsv.fields = [donor]
     - tsv
