--- a/www/views/entity/Sample/mutation_signatures_Nature2013.haml
+++ b/www/views/entity/Sample/mutation_signatures_Nature2013.haml
@@ -14,5 +14,6 @@
 = action_card_render action_card do
   = table :page => "1~-#{donor}" do
     - tsv = donor.mutation_signature.transpose("Signature")
+    - tsv.cast = :to_f
     - tsv.fields = [donor]
     - tsv
