--- a/www/views/main.haml
+++ b/www/views/main.haml
@@ -4,5 +4,17 @@
       PCAWG
     %h2 
       PanCancer Analysis of Whole Genomes
-
+.ui.beg.segment.transition.visible.red.embargo
+  .ui.red.header
+    %i.disabled.warning.sign.icon
+    .content 
+      Embargo Policy
+      .sub.header
+        This data is under embargo, see
+        %a(href="https://dcc.icgc.org/pcawg")< https://dcc.icgc.org/pcawg
+        \.
+        Please write to 
+        %span.user< jennifer.jennings
+        %span.at_addr oicr.on.ca 
+        for further information.
 = partial_render('main/cohort_selection')
