--- a/www/views/entity/Sample.haml
+++ b/www/views/entity/Sample.haml
@@ -8,7 +8,7 @@
   - abbr = Study.setup(abbr.dup)
   - abbr.donors.include? sample
 - study = Study.setup(study.first)
-- entity_card.meta do
+-# entity_card.meta do
 
   %h3 Sample tasks
 
