--- a/www/views/main.haml
+++ b/www/views/main.haml
@@ -4,17 +4,39 @@
       PCAWG
     %h2 
       PanCancer Analysis of Whole Genomes
-.ui.beg.segment.transition.visible.red.embargo
-  .ui.red.header
-    %i.disabled.warning.sign.icon
-    .content 
-      Embargo Policy
-      .sub.header
-        This data is under embargo, see
-        %a(href="https://dcc.icgc.org/pcawg")< https://dcc.icgc.org/pcawg
-        \.
-        Please write to 
-        %span.user< jennifer.jennings
-        %span.at_addr oicr.on.ca 
-        for further information.
+
+.ui.very.basic.segment
+  .ui.grid
+    .ui.ten.wide.column
+      :documentation
+
+        Welcome to the PCAWG-Scout. This portal will help to explore the data
+        produced by the PCAWG project. It's organized as a collection of
+        reports centered around entities and lists of entities: donors,
+        cohorts, genes, etc. These reports all computed on-demand and cached,
+        and some even take parameters. Please consult the help page for more
+        information.
+        
+        You may also find tips on some parts of the site with additional
+        information. These tips are green dots with a question mark inside, and
+        appear at the top right part of a page section, and are revealed when
+        hovering over that section; look, there is one down there!
+        
+        You can start by checking out some of the cohorts bellow or by
+        searching for a gene of interest in the search area above.
+
+    .ui.six.wide.column
+      .ui.beg.segment.transition.visible.red.embargo
+        .ui.red.header
+          %i.disabled.warning.sign.icon
+          .content 
+            Embargo Policy
+            .sub.header
+              This data is under embargo, see
+              %a(href="https://dcc.icgc.org/pcawg" style='width:auto;padding:0px')< https://dcc.icgc.org/pcawg
+              \.
+              Please write to 
+              %span.user< jennifer.jennings
+              %span.at_addr oicr.on.ca 
+              for further information.
 = partial_render('main/cohort_selection')
